# openaxiom

./: .gitignore  404.html  GEMINI.md  QWEN.md  README.md  README.org  README_SERVER.md  add_header.lua  advanced.html  calculate_probabilities.py  channeling.html  channeling.org  character_creation.html  character_creation.org  character_mechanics.html  character_mechanics.org  check_progression.py  combat.html  combat.org  compile-org.sh  core_game_loop.html  core_game_loop.org  custom_markdown_writer.lua  dice_roller.html  dice_roller.org  game_mastering.html  generate_probability_graph.py  generate_skill_progression_graph.py  index.html  live_preview.py  logic_of_action.html  logic_of_action.org  mkdocs.yml  number_sections.lua  openaxiom_manual.html  openaxiom_manual.org  player_characters.org  pyproject.toml  search.html  social_relations.html  (+8 more)
app/: search.py  server.py
docs/: advanced.md  channeling.md  character_creation.md  character_mechanics.md  combat.md  core_game_loop.md  dice_roller.md  game_mastering.md  index.md  logic_of_action.md  openaxiom_manual.md  social_relations.md
openaxiom_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
packs/: general.html
scripts/: calculate_hp_table.py  calculate_skill_cost.py  check_100_percent.py  debug_progression.py  debug_progression2.py  detailed_progression.py  generate_health_graph.py  replace_html_with_md.py  verify_points.py
search/: search_index.json
site/: 404.html  advanced.html  channeling.html  character_creation.html  character_mechanics.html  combat.html  core_game_loop.html  (+6 more)
(+31 files in other folders)
