[project]
name = "openaxiom-server"
version = "0.1.0"
description = "A Flask-based server for the OpenAxiom TTRPG manual with live reloading"
readme = "README_SERVER.md"
dependencies = [
    "flask>=2.3.2",
    "flask-socketio>=5.3.4",
    "watchdog>=3.0.0",
    "pandoc>=2.3",
]

[project.scripts]
openaxiom-server = "app.server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"